# HEX

./: .gitignore  pyproject.toml  readme_zh.md
.qoder/repowiki/zh/content/: Getting Started.md  快速开始.md  示例与最佳实践.md  虚拟Codex生成.md  配置与部署.md
.qoder/repowiki/zh/content/API参考文档/: API参考文档.md  HEX模块API.md  MICA模块API.md  数据处理API.md
.qoder/repowiki/zh/content/HEX模型架构/: CustomModel设计原理.md  HEX模型架构.md  分布式训练框架.md  增强的模型加载与权重管理.md  模型推理与评估.md  特征分布平滑技术.md
.qoder/repowiki/zh/content/MICA多模态集成/: MICA多模态集成.md  多模态注意力机制.md  多模态融合策略.md  数据集处理管道.md  训练测试工作流程.md
.qoder/repowiki/zh/content/数据预处理模块/: WSI文件处理.md  数据集构建与分割.md  数据预处理模块.md  标记物强度提取.md  补丁提取算法.md
.qoder/repowiki/zh/content/配置与部署/: Web应用程序开发指南.md  批量处理功能.md  荧光叠加系统.md  配置与部署.md
.qoder/repowiki/zh/content/项目概述/: 创新特性.md  应用场景.md  技术原理.md  系统架构.md  项目概述.md  项目简介.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
HEX/: test_codex_lung_marker.py
HEX/sample_data/: pred_0_0.h5  splits_0.csv
HEX/sample_data/channel_registered/: 0.csv  2.csv  3.csv  4.csv
hex/: hex_architecture.py  predict_he_to_codex_h5.py
webapp/: app.py
webapp/templates/: index.html
